# ai-motivational-video-creator

./: .gitignore  INSTAGRAM_UPLOAD_JOURNEY.md  README.md  images_usage.json  installer.sh  package-lock.json  package.json  pyproject.toml  quotes.csv  upload.js
backend/app/: cli.py  config.py  csv_store.py  database.py  instagram.py  jobs.py  main.py  models.py  renderer.py  storage.py  telegram_bot.py  youtube.py
deploy/: ai-video-gen-bot.service  bot.env.example  crontab.example
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
scripts/: ig_login.py  ig_playwright_login.py  ig_upload_playwright.py  install_autostart.sh  run_bot.sh  start_bot_background.sh  start_bot_screen.sh
